Add class unloading as JAVA OPTS