@@ -5,4 +5,6 @@ fi
 
 ./gen_version.sh
 
+JAVA_OPTS="-XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled" \
 activator "run $PORT"
+
